# yabo

./: .dockerignore  .gdb_history  .gitattributes  .gitignore  Cargo.toml  README.md  example-file.yb  example.yb  grammar.js  inspirations.txt  test.py  vtable.py  yabo.c  yabo.py  ybtest.py  yest.py
.github/workflows/: test.yml
compiler/: Cargo.toml
compiler/src/: absint.rs  config.rs  context.rs  error.rs  expr.rs  interner.rs  low_effort_interner.rs  main.rs  source.rs
compiler/tree-sitter-yabo/: README.md  binding.gyp  grammar.js
crates/tree-sitter-yabo/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
crates/tree-sitter-yabo/bindings/c/: tree-sitter-yabo.pc.in
crates/tree-sitter-yabo/bindings/go/: binding.go  binding_test.go  go.mod
crates/tree-sitter-yabo/bindings/node/: binding.cc  index.js
crates/tree-sitter-yabo/bindings/python/tests/: test_binding.py
crates/tree-sitter-yabo/bindings/python/tree_sitter_yabo/: __init__.py  binding.c
crates/tree-sitter-yabo/bindings/rust/: build.rs  lib.rs
crates/tree-sitter-yabo/bindings/swift/TreeSitterYabo/: yabo.h
crates/tree-sitter-yabo/bindings/swift/TreeSitterYaboTests/: TreeSitterYaboTests.swift
crates/tree-sitter-yabo/queries/: highlights.scm  locals.scm
crates/tree-sitter-yabo/src/: grammar.json  node-types.json  parser.c  scanner.c
crates/tree-sitter-yabo/test/corpus/: simple.txt
crates/treereduce-yabo/: Cargo.toml
crates/yaboc/: Cargo.toml
crates/yaboc-absint/: Cargo.toml
crates/yaboc-ast/: Cargo.toml
crates/yaboc-ast/src/: convert.rs  error.rs  expr.rs  import.rs  lib.rs  represent.rs
crates/yaboc-backtrack/: Cargo.toml
crates/yaboc-base/: Cargo.toml
crates/yaboc-base/src/: config.rs  databased_display.rs  hash.rs  interner.rs  lib.rs  low_effort_interner.rs  represent.rs  source.rs
crates/yaboc-base/src/error/: diagnostic.rs  mod.rs
crates/yaboc-cg-llvm/: Cargo.toml
crates/yaboc-cg-llvm/src/: convert_mir.rs  convert_regex.rs  convert_thunk.rs  defs.rs  funs.rs  getset.rs  lib.rs  val.rs  vtables.rs
crates/yaboc-check/: Cargo.toml
crates/yaboc-check/src/: main.rs
crates/yaboc-constraint/: Cargo.toml
crates/yaboc-constraint/src/: backtrack.rs  error.rs  len.rs  len_term.rs  lib.rs  represent.rs
crates/yaboc-database/: Cargo.toml
crates/yaboc-database/src/: lib.rs
crates/yaboc-dependents/: Cargo.toml
crates/yaboc-dependents/src/: backtrack.rs  error.rs  lib.rs  represent.rs  requirements.rs
crates/yaboc-expr/: Cargo.toml
crates/yaboc-hir/: Cargo.toml
crates/yaboc-hir-types/: Cargo.toml
crates/yaboc-hir-types/src/: error.rs  full.rs  id_cursor.rs  lib.rs  public.rs  returns.rs  signature.rs
crates/yaboc-hir/src/: convert.rs  error.rs  lib.rs  represent.rs  variable_set.rs  walk.rs
crates/yaboc-layout/: Cargo.toml
crates/yaboc-layout/src/: collect.rs  lib.rs  mir_subst.rs  prop.rs  represent.rs  vtable.rs
crates/yaboc-layout/src/collect/: call_info.rs  layout_info.rs  tailsize.rs
crates/yaboc-len/: Cargo.toml
crates/yaboc-mir/: Cargo.toml
crates/yaboc-mir/src/: convert.rs  expr.rs  len.rs  lib.rs  represent.rs  strictness.rs
crates/yaboc-order/: Cargo.toml
crates/yaboc-req/: Cargo.toml
crates/yaboc-resolve/: Cargo.toml
crates/yaboc-resolve/src/: error.rs  expr.rs  lib.rs  parserdef_ssc.rs  refs.rs
crates/yaboc-target/: Cargo.toml
crates/yaboc-types/: Cargo.toml
crates/yaboc-types/src/: binary_tree.rs  connections.rs  deref_levels.rs  inference.rs  lib.rs  represent.rs  to_type.rs
crates/yaboc/src/: context.rs  main.rs
doc/: intro.md
examples/: elf.yb  ext2.yb  fat32.yb  gpt.yb  mbr.yb  png.yb  xor_linked_list.yb
include/yabo/: dynamic.h  parse_export_call.h  vtable.h
lib/: aoc.yb  bit.yb  core.yb  list.yb  math.yb  parse.yb  parse.ybtest  rt.c  seq.yb  std.yb  text.yb
src/: absint.rs  ast.rs  context.rs  databased_display.rs  error.rs  expr.rs  expr2.rs  hash.rs  hir.rs  interner.rs  main.rs  parse.rs  source.rs  types.rs
src/absint/: layout.rs  mod.rs  represent.rs
src/ast/: convert.rs  error.rs  mod.rs
std/: mod.yb
test/: discriminant.yb  min.yb  ref-not-export.yb  two.yb
tests/: aoc12_15.ybtest  aoc15-12.ybtest  aoc18_20.ybtest  aoc1_22.ybtest  aoc1_23.ybtest  aoc20-18.ybtest  aoc21_22.ybtest  aoc22-1.ybtest  aoc22-2.ybtest  aoc22-21.ybtest  aoc22-3.ybtest  aoc22-4.ybtest  aoc22-6.ybtest  aoc23-1.ybtest  aoc23-2b.ybtest  aoc23-3.ybtest  aoc23-4.ybtest  aoc23-7.ybtest  aoc24-2.ybtest  aoc24-3.ybtest  aoc24-4.ybtest  aoc24-7.ybtest  aoc25-3.ybtest  aoc2_22.ybtest  aoc2b_23.ybtest  aoc3_22.ybtest  aoc3_23.ybtest  aoc4_22.ybtest  aoc4_23.ybtest  aoc6_22.ybtest  aoc7_23.ybtest  arg-dep-len-error.ybtest  array-3d.ybtest  array-fill.ybtest  array-id.ybtest  array-len.ybtest  array-nested.ybtest  array_3d.ybtest  array_len.ybtest  array_nested.ybtest  (+139 more)
tools/: print.c
tools/yaboprint/: CMakeLists.txt  yaboprint.c
tools/ybq/: .gitignore  README.md  package.yaml  stack.yaml  ybq.cabal
tools/ybq/app/: Main.hs
tools/ybq/src/: Builtin.hs  Expr.hs  Lib.hs  Ops.hs  Parse.hs  ValGen.hs  YaboBindings.hs  YaboVal.hs  builtin.ybq  yabo-bindings.c  yabo-bindings.h
tools/ylliab/: CMakeLists.txt  Main.qml  OpenFile.qml  ValView.qml  addressdialog.cpp  addressdialog.hpp  addressdialog.ui  color.cpp  color.hpp  colorscrollbar.cpp  colorscrollbar.hpp  compile.cpp  compile.hpp  compiler_error_view.cpp  compiler_error_view.hpp  compilewidget.cpp  compilewidget.hpp  compilewidget.ui  dataprovider.hpp  executor.cpp  executor.hpp  filecontent.cpp  filecontent.hpp  filerequester.cpp  filerequester.hpp  flamegraph.cpp  flamegraph.hpp  graph.cpp  graph.hpp  graphview.cpp  graphview.hpp  hex.cpp  hex.hpp  hexview.cpp  hexview.hpp  init.cpp  init.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  (+40 more)
tools/ylliab/test/: generate_large_test_data.py  large_test_data.yaml  recursive_test_data.yaml  simple_test_data.yaml  test_yaml_model.cpp  yamldataprovider.cpp  yamldataprovider.hpp
tree-sitter-yabo/: Cargo.toml  grammar.js  package.json
(+128 files in other folders)
