[package]
name = "tree-sitter-yabo"
description = "tree-sitter parser for yabo language"
version = "0.1.0"
authors = ["8051enthusiast <8051enthusiast@protonmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "yabo"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/8051enthusiast/yabo"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
