[package]
name = "yaboc-ast"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
salsa = { workspace = true }
tree-sitter = "0.20.10"
yaboc-base = { path = "../yaboc-base" }
tree-sitter-yabo = { path = "../tree-sitter-yabo" }
sha2 = "0.10.7"
fxhash = "0.2.1"
