[package]
name = "yaboc-base"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
ariadne = "0.4.1"
bumpalo = "3.16.0"
dirs = "5.0.1"
fxhash = "0.2.1"
salsa = { workspace = true }
serde = { version = "1.0.210", features = ["derive"] }
sha2 = "0.10.8"
