[package]
name = "yaboc-cg-llvm"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
salsa = "0.16.1"
yaboc-base = { path = "../yaboc-base" }
yaboc-ast = { path = "../yaboc-ast" }
yaboc-hir = { path = "../yaboc-hir" }
yaboc-resolve = { path = "../yaboc-resolve" }
yaboc-types = { path = "../yaboc-types" }
yaboc-hir-types = { path = "../yaboc-hir-types" }
yaboc-order = { path = "../yaboc-order" }
yaboc-absint = { path = "../yaboc-absint" }
yaboc-mir = { path = "../yaboc-mir" }
yaboc-layout = { path = "../yaboc-layout" }
yaboc-database = { path = "../yaboc-database" }
fxhash = "0.2.1"
bumpalo = "3.11.1"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm13-0"] }
