[package]
name = "yaboc-cg-llvm"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
salsa = "0.16.1"
yaboc-base = { path = "../yaboc-base" }
yaboc-target = { path = "../yaboc-target" }
yaboc-ast = { path = "../yaboc-ast" }
yaboc-hir = { path = "../yaboc-hir" }
yaboc-resolve = { path = "../yaboc-resolve" }
yaboc-types = { path = "../yaboc-types" }
yaboc-hir-types = { path = "../yaboc-hir-types" }
yaboc-dependents = { path = "../yaboc-dependents" }
yaboc-constraint = { path = "../yaboc-constraint" }
yaboc-absint = { path = "../yaboc-absint" }
yaboc-mir = { path = "../yaboc-mir" }
yaboc-layout = { path = "../yaboc-layout" }
yaboc-database = { path = "../yaboc-database" }
yaboc-req = { path = "../yaboc-req" }
fxhash = "0.2.1"
bumpalo = "3.13.0"
inkwell = { workspace = true }
regex-automata = "0.4.6"
hexagex = "0.2.3"
