[package]
name = "yaboc-constraint"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
salsa = { workspace = true }
yaboc-base = { path = "../yaboc-base" }
yaboc-ast = { path = "../yaboc-ast" }
yaboc-expr = { path = "../yaboc-expr" }
yaboc-dependents = { path = "../yaboc-dependents" }
yaboc-len = { path = "../yaboc-len" }
yaboc-backtrack = { path = "../yaboc-backtrack" }
yaboc-resolve = { path = "../yaboc-resolve" }
yaboc-hir = { path = "../yaboc-hir" }
yaboc-types = { path = "../yaboc-types" }
yaboc-hir-types = { path = "../yaboc-hir-types" }
yaboc-req = { path = "../yaboc-req" }
fxhash = "0.2.1"