[package]
name = "yaboc-database"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
salsa = "0.16.1"
yaboc-base = { path = "../yaboc-base" }
yaboc-ast = { path = "../yaboc-ast" }
yaboc-hir = { path = "../yaboc-hir" }
yaboc-resolve = { path = "../yaboc-resolve" }
yaboc-types = { path = "../yaboc-types" }
yaboc-hir-types = { path = "../yaboc-hir-types" }
yaboc-dependents = { path = "../yaboc-dependents" }
yaboc-absint = { path = "../yaboc-absint" }
yaboc-mir = { path = "../yaboc-mir" }
yaboc-layout = { path = "../yaboc-layout" }
