[package]
name = "yaboc-hir-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
salsa = { workspace = true }
fxhash = "0.2.1"
yaboc-base = { path = "../yaboc-base" }
yaboc-expr = { path = "../yaboc-expr" }
yaboc-ast = { path = "../yaboc-ast" }
yaboc-hir = { path = "../yaboc-hir" }
yaboc-resolve = { path = "../yaboc-resolve" }
yaboc-types = { path = "../yaboc-types" }
bumpalo = "3.13.0"
petgraph = { workspace = true }
