[package]
name = "yaboc-hir"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
salsa = { workspace = true }
yaboc-base = { path = "../yaboc-base" }
yaboc-ast = { path = "../yaboc-ast" }
yaboc-expr = { path = "../yaboc-expr" }
fxhash = "0.2.1"
enumflags2 = "0.7.7"
dot = "0.1.4"
