[package]
name = "yaboc-layout"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
salsa = { workspace = true }
yaboc-base = { path = "../yaboc-base" }
yaboc-target = { path = "../yaboc-target" }
yaboc-expr = { path = "../yaboc-expr" }
yaboc-ast = { path = "../yaboc-ast" }
yaboc-hir = { path = "../yaboc-hir" }
yaboc-resolve = { path = "../yaboc-resolve" }
yaboc-types = { path = "../yaboc-types" }
yaboc-hir-types = { path = "../yaboc-hir-types" }
yaboc-dependents = { path = "../yaboc-dependents" }
yaboc-constraint = { path = "../yaboc-constraint" }
yaboc-absint = { path = "../yaboc-absint" }
yaboc-mir = { path = "../yaboc-mir" }
yaboc-req = { path = "../yaboc-req" }
fxhash = "0.2.1"
petgraph = { workspace = true }
sha2 = "0.10.8"
bumpalo = "3.16.0"
