[package]
name = "yaboc-mir"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
salsa = { workspace = true }
yaboc-base = { path = "../yaboc-base" }
yaboc-expr = { path = "../yaboc-expr" }
yaboc-ast = { path = "../yaboc-ast" }
yaboc-hir = { path = "../yaboc-hir" }
yaboc-resolve = { path = "../yaboc-resolve" }
yaboc-types = { path = "../yaboc-types" }
yaboc-hir-types = { path = "../yaboc-hir-types" }
yaboc-dependents = { path = "../yaboc-dependents" }
yaboc-len = { path = "../yaboc-len" }
yaboc-constraint = { path = "../yaboc-constraint" }
yaboc-req = { path = "../yaboc-req" }
fxhash = "0.2.1"
enumflags2 = "0.7.10"
