[package]
name = "yaboc-resolve"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
salsa = "0.16.1"
yaboc-base = { path = "../yaboc-base" }
yaboc-expr = { path = "../yaboc-expr" }
yaboc-ast = { path = "../yaboc-ast" }
yaboc-hir = { path = "../yaboc-hir" }
fxhash = "0.2.1"
petgraph = "0.6.2"
