[package]
name = "yaboc-resolve"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
salsa = { workspace = true }
yaboc-base = { path = "../yaboc-base" }
yaboc-expr = { path = "../yaboc-expr" }
yaboc-ast = { path = "../yaboc-ast" }
yaboc-hir = { path = "../yaboc-hir" }
fxhash = "0.2.1"
petgraph = { workspace = true }
regex-syntax = "0.8.3"
hexagex = "0.2.3"
