[package]
name = "yaboc-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
salsa = { workspace = true }
yaboc-base = { path = "../yaboc-base" }
yaboc-ast = { path = "../yaboc-ast" }
sha2 = "0.10.7"
bumpalo = "3.13.0"
fxhash = "0.2.1"
petgraph = { workspace = true }