[package]
name = "yaboc"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
salsa = { workspace = true }
yaboc-base = { path = "../yaboc-base" }
yaboc-target = { path = "../yaboc-target" }
yaboc-ast = { path = "../yaboc-ast" }
yaboc-hir = { path = "../yaboc-hir" }
yaboc-resolve = { path = "../yaboc-resolve" }
yaboc-types = { path = "../yaboc-types" }
yaboc-hir-types = { path = "../yaboc-hir-types" }
yaboc-constraint = { path = "../yaboc-constraint" }
yaboc-dependents = { path = "../yaboc-dependents" }
yaboc-absint = { path = "../yaboc-absint" }
yaboc-mir = { path = "../yaboc-mir" }
yaboc-layout = { path = "../yaboc-layout" }
yaboc-database = { path = "../yaboc-database" }
yaboc-cg-llvm = { path = "../yaboc-cg-llvm" }
fxhash = "0.2.1"
bumpalo = "3.16.0"
clap = { version = "4.5.20", features = ["default", "derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
dot = "0.1.4"
tempfile = "3.13.0"
